--- a/AndroShieldApp/AndroShield/Styling/StyleSheet.css
+++ b/AndroShieldApp/AndroShield/Styling/StyleSheet.css
@@ -328,6 +328,60 @@ input.loginInput:focus::-webkit-input-placeholder {
     height: 24px;
     width: 50px;
 }
+.reportPageButtons {
+    height: 30px;
+    font-size: 20px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    color: #feffea;
+    background-color: #282828;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 5px #666;
+    display: inline-block;
+    margin: 10px 0px 20px 20px;
+}
+.reportPageButtons:hover {
+    background-color: #424242;
+}
+.reportPageButtons:active {
+    background-color: #a3a3a3;
+    box-shadow: 0 1px #666;
+    transform: translateY(4px);
+}
+.centeredButtons {
+    text-align: center;
+    min-height: 80px;
+}
+#vulnerabilityReportTable, #apkInfoTable, table, th, td {
+    margin: 0px auto;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    border-collapse: collapse;
+    text-align: left;
+    background-color: #feffea;
+}
+.rightBorder  {
+    border-right: 2px solid black;
+}
+.cellHeader {
+    background-color: #424242;
+    font-weight: bolder;
+    color: whitesmoke;
+}
+.cell {
+    background-color: #424242;
+    color: whitesmoke;
+
+}
+.centeredClass {
+    font-size:xx-large;
+    text-align: center;
+    font-weight:700;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
 /*.inputfile {
     width: 0.1px;
     height: 0.1px;
@@ -336,9 +390,6 @@ input.loginInput:focus::-webkit-input-placeholder {
     position: absolute;
     z-index: -1;
 }*/
-#browseLbl {
-    margin-top: -15px;
-}
 /*.browseLbl {
     display: block;
     font-size: 1.25em;
