--- a/AndroShieldApp/AndroShield/masterPage.Master
+++ b/AndroShieldApp/AndroShield/masterPage.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="masterPage.Master.cs" Inherits="AndroShield.masterPage" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="masterPage.Master.cs" Inherits="AndroApp.masterPage" %>
 
 <!DOCTYPE html>
 
