changed Dr Hanan to AL Hanan

--- a/AndroShieldApp/AndroShield/masterPage.Master
+++ b/AndroShieldApp/AndroShield/masterPage.Master
@@ -36,7 +36,7 @@
             <p class="boldText centerAligned lightText">Created By</p>
             <p class="centerAligned lightText">Amr Ashraf <br />Amgad ElDessouki<br />Menna Tullah Magdy<br />Nouran Abdeen</p><br />
             <p class="boldText centerAligned lightText">Supervised By</p>
-            <p class="centerAligned lightText">Dr Islam Hegazy<br />Dr Hanan Yousry</p><br />
+            <p class="centerAligned lightText">Dr Islam Hegazy<br />AL Hanan Yousry</p><br />
             <p class="boldText centerAligned lightText"> Software Engineering Department 2018</p>
         </div>
         <div class="footerColumn footerRight">
