--- a/AndroShieldApp/AndroShield/Styling/StyleSheet.css
+++ b/AndroShieldApp/AndroShield/Styling/StyleSheet.css
@@ -131,6 +131,7 @@ footer {
     background: #e3dc95;
     height: calc(100% - 220px);
     min-height: 400px;
+    margin-bottom: 30px;
 }
 .navigationBar {
     opacity: 0.8;
@@ -167,6 +168,9 @@ footer {
     cursor: pointer;
     border-radius: 5px;
     opacity: 1;
+}
+#vulnerabilityReportTable  {
+    margin-bottom: 20px;
 }
 .topRight:active {
     background: #F7F1DE;
