--- a/AndroShieldApp/AndroShield/masterPage.Master
+++ b/AndroShieldApp/AndroShield/masterPage.Master
@@ -5,12 +5,12 @@
 <html>
 <head runat="server">
     <title></title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
 
     <link rel="stylesheet" href="/Styling/StyleSheet.css" />
 
     <script src="/JavaScript/jquery.js"></script>
+    <asp:ContentPlaceHolder ID="head" runat="server">
+    </asp:ContentPlaceHolder>
     <script src="/JavaScript/JavaScript.js"></script>
 </head>
 <body>
@@ -28,7 +28,7 @@
     <asp:ContentPlaceHolder ID="pageContent" runat="server">
 
     </asp:ContentPlaceHolder>
-    <footer class="footer darkBackground">
+    <footer id="footer" class="footer darkBackground">
         <div class="footerColumn footerLeft">
             <img class="footerImage" src="/Images/SWE Logo.png" alt="SWE Department Logo" />
         </div>
