all reports page displays all reports but they're still not clickable

--- a/AndroShieldApp/AndroShield/Styling/StyleSheet.css
+++ b/AndroShieldApp/AndroShield/Styling/StyleSheet.css
@@ -127,6 +127,9 @@ footer {
     box-shadow: 0 1px #666;
     transform: translateY(4px);
 }
+th , tr , td {
+    padding: 10px;
+}
 .wrapper {
     background: #e3dc95;
     height: calc(100% - 220px);
