shwayet 3ak fel frontend

--- a/AndroShieldApp/AndroShield/Styling/StyleSheet.css
+++ b/AndroShieldApp/AndroShield/Styling/StyleSheet.css
@@ -392,6 +392,9 @@ input.loginInput:focus::-webkit-input-placeholder {
     margin-bottom: 20px;
     margin-top: 20px;
 }
+.apkUploadContainer button{
+    margin: 0px auto;
+}
 /*.inputfile {
     width: 0.1px;
     height: 0.1px;
