--- a/AndroShieldApp/AndroShield/Styling/StyleSheet.css
+++ b/AndroShieldApp/AndroShield/Styling/StyleSheet.css
@@ -486,3 +486,8 @@ input.loginInput:focus::-webkit-input-placeholder {
 .homepageLink {
     margin-top: 15px;
 }
+/*.vulnerabilityReportTableRows, td, table td, vulnerabilityTableRow, .extraInfo {
+    height: 20px;
+    overflow-wrap: break-word;
+    overflow: hidden;
+}*/
