--- a/AndroShieldApp/AndroShield/Styling/StyleSheet.css
+++ b/AndroShieldApp/AndroShield/Styling/StyleSheet.css
@@ -499,3 +499,6 @@ input.loginInput:focus::-webkit-input-placeholder {
 .highRiskColor {
     background-color: #F2302A;
 }
+.leftMargin {
+    margin-left: 25px;
+}
